--- a/ReportGeneration/src/index.html
+++ b/ReportGeneration/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
+  <script>if (global === undefined) { var global = window; }</script>
   <meta charset="utf-8">
   <title>ReportGeneration</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
